samples/_failures_safe/1761325095_e6f8b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d29a531a.c: In function ‘main’:
./samples/SAFE/__tmp_d29a531a.c:163:35: error: expected ‘;’ at end of input
  163 |     for (int i = 0; i < edge_count
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_d29a531a.c:163:5: error: expected declaration or statement at end of input
  163 |     for (int i = 0; i < edge_count
      |     ^~~
